--- a/src/manifest.json
+++ b/src/manifest.json
@@ -9,5 +9,12 @@
     "default_title": "Have a good day",
     "default_popup": "index.html"
   },
-  "permissions": ["activeTab"]
+  "permissions": ["activeTab", "storage"],
+  "content_scripts": [
+    {
+      "matches": ["http://*.apploi.com/*", "https://*.apploi.com/*"],
+      "all_frames": true,
+      "js": ["storage.js"]
+    }
+  ]
 }
