--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,5 +17,10 @@
       "run_at": "document_start",
       "js": ["/assets/js/storage.js"]
     }
-  ]
+  ],
+  "icons": { 
+    "16": "assets/icons/icon-16.png",
+    "48": "assets/icons/icon-48.png",
+    "128": "assets/icons/icon-128.png" 
+  }
 }
