--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "eslint": "^4.9.0",
     "eslint-config-synacor": "^2.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "per-env": "^1.0.2",
     "jest": "^21.2.1",
+    "per-env": "^1.0.2",
     "preact-cli": "^2.1.0",
     "preact-render-spy": "^1.2.1"
   },
   "dependencies": {
     "preact": "^8.2.6",
-    "preact-compat": "^3.17.0",
+    "preact-compat": "^3.18.5",
     "preact-router": "^2.5.7",
+    "react-slick": "^0.24.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^3.4.10"
   },
   "jest": {
