--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
   "private": true,
   "name": "bug-extension",
-  "version": "0.0.0",
+  "version": "0.9.1",
   "license": "MIT",
   "scripts": {
-    "start": "per-env",
-    "start:production": "npm run -s serve",
-    "start:development": "npm run -s dev",
+    "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
-    "lint": "eslint src",
-    "test": "jest"
+    "lint": "eslint src"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
@@ -20,21 +17,17 @@
     "build/*"
   ],
   "devDependencies": {
-    "eslint": "^4.9.0",
-    "eslint-config-synacor": "^2.0.2",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.2.1",
-    "per-env": "^1.0.2",
-    "preact-cli": "^2.1.0",
-    "preact-render-spy": "^1.2.1"
+    "eslint": "^6.0.1",
+    "eslint-config-synacor": "^3.0.4",
+    "if-env": "^1.0.0",
+    "preact-cli": "^3.0.0-rc.6"
   },
   "dependencies": {
-    "preact": "^8.2.6",
-    "preact-compat": "^3.18.5",
-    "preact-router": "^2.5.7",
+    "preact": "^10.1.0",
+    "preact-render-to-string": "^5.1.2",
     "react-slick": "^0.24.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^3.4.10"
+    "styled-components": "^5.0.0"
   },
   "jest": {
     "verbose": true,
@@ -59,9 +52,9 @@
       "\\.(css|less|scss)$": "identity-obj-proxy",
       "^./style$": "identity-obj-proxy",
       "^preact$": "<rootDir>/node_modules/preact/dist/preact.min.js",
-      "^react$": "preact-compat",
-      "^react-dom$": "preact-compat",
-      "^create-react-class$": "preact-compat/lib/create-react-class",
+      "^react$": "preact/compat",
+      "^react-dom$": "preact/compat",
+      "^create-react-class$": "preact/compat/lib/create-react-class",
       "^react-addons-css-transition-group$": "preact-css-transition-group"
     }
   }
